# law-and-order

./: .env.docker  .env.sample  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  FLOWS.md  README.md  alembic.ini  disable_rls.sql  docker-compose.yml  fix_jwt.sql  implementation.md  mvp.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  seed.sql
.github/: CODEOWNERS
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: backend.yml  ci.yml  contract-tests.yml  frontend.yml  integration-test.yml
alembic/: env.py
apps/web/: jest.config.mjs  next.config.mjs  package.json  tsconfig.json
apps/web/src/app/: page.tsx  (+1 more)
docassemble/playground/: retainer_interview.yml
docassemble/templates/settlement/: disbursement_sheet.md
docker/docassemble/: api.py  docker-compose.yml  install_api.sh
docs/: CRUD_REFERENCE.md  DEVELOPMENT.md  FLOWS.md  MVP.md  README.md  SCHEMA.md  TEMPLATE_REFERENCE.md  deployment.md  markdown-processing.md  setup.md  task-management.md  templates.md
docs/samples/: PIP LOR.docx  Task List - Initial (Good Verbal).md  Task List - Initial (MVA Zero).md  Task List - Initial (MVA).md  Task List - Post Arbitration.md  Task List - Post Deposition.md  Task List.md
docs/task-templates/: tasks-generic.md  tasks-initial-mva-good-verbal.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  a8ffc5416e84_add_amount_to_doc_table.py  b93f2c2c2e84_add_settlement_and_fee_adjustments.py
openapi/: pi-workflow.yaml
prisma/: dev.db  schema.prisma
prisma/migrations/20250406154930_init/: migration.sql
prisma/migrations/20250408212530_add_tasks/: migration.sql
prisma/migrations/20250408215734_init/: migration.sql
prisma/migrations/20250413183438_add_automation_fields/: migration.sql
prisma/migrations/20250413220912_add_cascade_deletes_to_client_relations/: migration.sql
prisma/prisma/: dev.db
scripts/: check_templates.py  export_openapi.py  fix_imports.sh  health_docassemble.py  seed-database.ts  seed.sh  test-sdk-import.js
src/app/: page.tsx
src/app/clients/: layout.tsx
src/app/dashboard/: layout.tsx  page.tsx
src/app/doc-modifier/: page.tsx
src/app/new-client/: layout.tsx  page.tsx
src/components/: AddClientButton.tsx  AutomationModal.tsx  DeleteClientSection.tsx  DocumentList.tsx  DocumentManager.tsx  Letterhead.tsx  TaskList.tsx
src/lib/: documents.ts  prisma.ts  supabase.ts  tasks.ts  templates.ts
src/pi_auto/: __init__.py
src/pi_auto/db/: __init__.py  crud.py  engine.py  models.py  session.py
src/pi_auto_api/: __init__.py  auth.py  celery_app.py  config.py  db.py  events.py  main.py  schemas.py  tasks.py
src/pi_auto_api/email_templates/: retainer_sent.html  welcome.html
src/pi_auto_api/routers/: auth.py  pi_workflow.py  sse.py
src/pi_auto_api/tasks/: __init__.py  billing.py  damages.py  demand.py  disbursement.py  insurance_notice.py  medical_records.py  retainer.py
src/pi_auto_api/utils/: disbursement_calc.py  email_renderer.py  package_rules.py  pdf_merge.py  storage.py
src/templates/: demand-letter.md  initial-consult-email.md  interview-witness.md  medical-records-request.md  medical_records_request.md  representation-letter.md
templates/: sample.yml
templates/correspondence/: case_closure.txt  letter_of_representation.txt  settlement_rejection.txt
templates/intake/: client_intake_form.txt  hipaa_authorization.txt  retainer_agreement.txt
templates/litigation/: complaint.txt
templates/medical/: medical_lien_letter.txt  records_request.txt
templates/settlement/: demand_letter.txt  disbursement_sheet.txt  release_agreement.txt
templates/workflow/: task_list_generic.txt  task_list_post_arbitration.txt
tests/: __init__.py  conftest.py  template_guard.py  test_api_basic.py  test_api_basics.py  test_api_edge_cases.py  test_api_health.py  test_api_lifespan.py  test_api_lifespan_pool.py  test_api_readiness.py  test_api_spec.py  test_auth_login.py  test_celery_queue.py  test_cors.py  test_crud.py  test_crud.py.broken  test_damages_builder.py  test_db.py  test_db.py.broken  test_db_helpers.py  test_db_intake.py  test_demand_tasks.py  test_disbursement_sheet.py  test_docassemble_client.py  test_docusign_client.py  test_email_renderer.py  test_generate_retainer.py  test_insurance_notice.py  test_intake_endpoint.py  test_medical_records_cron.py  test_models.py  test_models.py.broken  test_package_rules.py  test_pdf_merge.py  test_retainer_api.py  test_rls.py  test_sanity.py  test_sdk_placeholder.py  test_sendgrid_client.py  test_sse.py  (+3 more)
tests/contract/: conftest.py  sdk_invoker.js  test_api_client_contract.py
tests/integration/: conftest.py  test_happy_path.py
(+17 files in other folders)
