[tool.poetry]
name = "pi-auto"
version = "0.1.0"
description = "Personal Injury Automation tools"
authors = ["PI Automation Team"]
readme = "README.md"
packages = [{include = "pi_auto", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
asyncpg = "^0.30.0"
python-dotenv = "^1.1.0"
alembic = "^1.15.2"
sqlalchemy = "^2.0.40"
aiosqlite = "^0.20.0"
greenlet = "^3.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = ">=0.23.6"
black = "^24.1.0"
isort = "^5.12.0"
ruff = "^0.1.11"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I", "W", "C", "D"]
ignore = ["D203", "D212"]

[tool.ruff.pydocstyle]
convention = "google"
