[tool.poetry]
name = "pi-auto"
version = "0.1.0"
description = "Personal Injury Automation tools"
authors = ["PI Automation Team"]
readme = "README.md"
packages = [{include = "pi_auto", from = "src"}, {include = "pi_auto_api", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
asyncpg = "^0.30.0"
python-dotenv = "^1.1.0"
alembic = "^1.15.2"
sqlalchemy = "^2.0.40"
aiosqlite = "^0.20.0"
greenlet = "^3.2.1"
psycopg2-binary = "^2.9.9"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.1.0"
celery = "^5.5.2"
email-validator = "^2.2.0"
redis = "^5.0.3"
docusign-esign = "^3.20.0"
sendgrid = ">=6.11.0"
jinja2 = "^3.1.6"
twilio = "9.0.0"
aiofiles = "^24.1.0"
pandas = "^2.2.0"
xlsxwriter = "^3.2.0"
weasyprint = "^62.2"
pikepdf = ">=8.10"
openapi-schema-validator = "^0.6.3"
pyyaml = "^6.0.2"
openapi-spec-validator = "^0.7.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = ">=0.23.6"
pytest-cov = "^4.1.0"
black = "^24.1.0"
isort = "^5.12.0"
ruff = "^0.1.11"
pre-commit = "^3.5.0"
requests = "^2.32.3"

[tool.poetry.scripts]
pi-auto-api = "pi_auto_api.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "--cov=src/pi_auto --cov-report=term-missing"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as an asyncio test",
    "integration: mark test as an integration test",
]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "C", "D"]
ignore = ["D203", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "google"
